--- a/myLoginApp/app/src/main/res/layout/activity_main.xml
+++ b/myLoginApp/app/src/main/res/layout/activity_main.xml
@@ -8,65 +8,85 @@
 
     <!-- android:inputType="textEmailAddress" : kieu email-->
 
-    <ImageView
-        android:id="@+id/myProfile"
-        android:layout_width="192dp"
-        android:layout_height="131dp"
-        android:layout_marginTop="36dp"
-        android:src="@drawable/screenshot_2022_01_23_111016"
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
+        android:layout_width="197dp"
+        android:layout_height="164dp"
+        app:cardCornerRadius="90dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/myProfile"
+            android:layout_width="192dp"
+            android:layout_height="130dp"
+            android:layout_marginTop="36dp"
+            android:src="@drawable/screenshot_2022_01_23_111016"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.cardview.widget.CardView>
 
     <EditText
         android:id="@+id/txtEmail"
-        android:layout_width="0dp"
+        android:layout_width="371dp"
         android:layout_height="48dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
         android:hint="Enter your email"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/myProfile" />
+        app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
     <EditText
         android:id="@+id/txtPassword"
         android:layout_width="369dp"
         android:layout_height="48dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
         android:hint="Enter your Password"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="@+id/txtEmail"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/txtEmail"
-        app:layout_constraintTop_toBottomOf="@+id/txtValidate" />
+        app:layout_constraintTop_toBottomOf="@+id/txtValidateEmail" />
 
     <Button
         android:id="@+id/btnLogin"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_width="376dp"
+        android:layout_height="47dp"
+        android:layout_marginTop="8dp"
         android:text="Login"
-        app:layout_constraintEnd_toEndOf="@+id/txtPassword"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/txtPassword"
-        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.485"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtValidatePassword" />
 
     <TextView
-        android:id="@+id/txtValidate"
+        android:id="@+id/txtValidateEmail"
+        android:textColor="@color/red"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="@+id/txtEmail"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/txtEmail"
         app:layout_constraintTop_toBottomOf="@+id/txtEmail" />
+
+    <TextView
+        android:id="@+id/txtValidatePassword"
+        android:textColor="@color/red"
+        android:layout_width="371dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
