--- a/buoi8service/app/src/main/res/layout/photo_list.xml
+++ b/buoi8service/app/src/main/res/layout/photo_list.xml
@@ -1,109 +1,132 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="6dip" >
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="120dp"
+    tools:context=".PhotoListActivity" >
 
     <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
+        android:id="@+id/textViewTitle"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:text="albumId: "
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:text="Item item persssss"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textViewURL"
+        android:text="01212sd"
+        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="@+id/textViewTitle"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView1"
-        android:layout_alignLeft="@+id/textView1"
-        android:text="id: "
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView2"
-        android:layout_alignLeft="@+id/textView2"
-        android:text="title: "
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+<!--    <TextView-->
+<!--        android:id="@+id/textView1"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentLeft="true"-->
+<!--        android:layout_alignParentTop="true"-->
+<!--        android:text="albumId: "-->
+<!--        android:textAppearance="?android:attr/textAppearanceMedium" />-->
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView3"
-        android:layout_alignLeft="@+id/textView3"
-        android:text="url: "
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+<!--    <TextView-->
+<!--        android:id="@+id/textView2"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_below="@+id/textView1"-->
+<!--        android:layout_alignLeft="@+id/textView1"-->
+<!--        android:text="id: "-->
+<!--        android:textAppearance="?android:attr/textAppearanceMedium" />-->
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView3"
-        android:layout_alignLeft="@+id/textView3"
-        android:text="thumbnailUrl: "
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+<!--    <TextView-->
+<!--        android:id="@+id/textView3"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_below="@+id/textView2"-->
+<!--        android:layout_alignLeft="@+id/textView2"-->
+<!--        android:text="title: "-->
+<!--        android:textAppearance="?android:attr/textAppearanceMedium" />-->
 
-    <!-- part 2-->
+<!--    <TextView-->
+<!--        android:id="@+id/textView4"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_below="@+id/textView3"-->
+<!--        android:layout_alignLeft="@+id/textView3"-->
+<!--        android:text="url: "-->
+<!--        android:textAppearance="?android:attr/textAppearanceMedium" />-->
 
-    <TextView
-        android:id="@+id/albumId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/textView2"
-        android:layout_alignLeft="@+id/id"
-        android:layout_marginLeft="0dp"
-        android:layout_marginBottom="1dp"
-        android:text="TextView" />
+<!--    <TextView-->
+<!--        android:id="@+id/textView5"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_below="@+id/textView3"-->
+<!--        android:layout_alignLeft="@+id/textView3"-->
+<!--        android:text="thumbnailUrl: "-->
+<!--        android:textAppearance="?android:attr/textAppearanceMedium" />-->
 
-    <TextView
-        android:id="@+id/id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/textView3"
-        android:layout_marginLeft="89dp"
-        android:layout_marginBottom="-3dp"
-        android:layout_toRightOf="@+id/textView3"
-        android:text="TextView" />
+<!--    &lt;!&ndash; part 2&ndash;&gt;-->
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView3"
-        android:layout_alignBottom="@+id/textView3"
-        android:layout_marginLeft="88dp"
-        android:layout_marginBottom="1dp"
-        android:layout_toRightOf="@+id/textView3"
-        android:text="TextView" />
+<!--    <TextView-->
+<!--        android:id="@+id/albumId"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_above="@+id/textView2"-->
+<!--        android:layout_alignLeft="@+id/id"-->
+<!--        android:layout_marginLeft="0dp"-->
+<!--        android:layout_marginBottom="1dp"-->
+<!--        android:text="TextView" />-->
 
-    <TextView
-        android:id="@+id/url"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView4"
-        android:layout_alignLeft="@+id/title"
-        android:layout_alignBottom="@+id/textView4"
-        android:layout_marginLeft="0dp"
-        android:layout_marginBottom="1dp"
-        android:text="TextView" />
+<!--    <TextView-->
+<!--        android:id="@+id/id"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_above="@+id/textView3"-->
+<!--        android:layout_marginLeft="89dp"-->
+<!--        android:layout_marginBottom="-3dp"-->
+<!--        android:layout_toRightOf="@+id/textView3"-->
+<!--        android:text="TextView" />-->
 
-    <TextView
-        android:id="@+id/thumbnailUrl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView4"
-        android:layout_alignLeft="@+id/title"
-        android:layout_alignBottom="@+id/textView4"
-        android:layout_marginLeft="0dp"
-        android:layout_marginBottom="1dp"
-        android:text="TextView" />
+<!--    <TextView-->
+<!--        android:id="@+id/title"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignBaseline="@+id/textView3"-->
+<!--        android:layout_alignBottom="@+id/textView3"-->
+<!--        android:layout_marginLeft="88dp"-->
+<!--        android:layout_marginBottom="1dp"-->
+<!--        android:layout_toRightOf="@+id/textView3"-->
+<!--        android:text="TextView" />-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/url"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignBaseline="@+id/textView4"-->
+<!--        android:layout_alignLeft="@+id/title"-->
+<!--        android:layout_alignBottom="@+id/textView4"-->
+<!--        android:layout_marginLeft="0dp"-->
+<!--        android:layout_marginBottom="1dp"-->
+<!--        android:text="TextView" />-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/thumbnailUrl"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignBaseline="@+id/textView4"-->
+<!--        android:layout_alignLeft="@+id/title"-->
+<!--        android:layout_alignBottom="@+id/textView4"-->
+<!--        android:layout_marginLeft="0dp"-->
+<!--        android:layout_marginBottom="1dp"-->
+<!--        android:text="TextView" />-->
 
 
 
