--- a/FoodProject/app/src/main/res/layout/category_item.xml
+++ b/FoodProject/app/src/main/res/layout/category_item.xml
@@ -2,16 +2,19 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginTop="90dp"
-    android:layout_marginLeft="30dp"
-    android:layout_width="160dp"
-    android:layout_height="180dp">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:paddingBottom="80dp"
+    android:paddingRight="30dp"
+    android:paddingTop="10dp"
+    android:layout_marginStart="40dp"
+    >
     <TextView
         android:id="@+id/textViewCategory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:textSize="28dp"
+        android:textSize="24dp"
         android:text="Most Favorites"
         android:layout_marginLeft="10dp"
         app:layout_constraintTop_toTopOf="parent"
