--- a/ReminderProject/app/src/main/res/layout/activity_create_view.xml
+++ b/ReminderProject/app/src/main/res/layout/activity_create_view.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:labelFor="@+id/editText"
     android:background="@color/green"
+    android:labelFor="@+id/editText"
     tools:context=".CreateActivity">
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -23,32 +24,32 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
-        android:textSize="20sp"
+        android:background="@color/greyWhite"
         android:gravity="top|start"
         android:inputType="textMultiLine"
         android:lines="8"
         android:maxLines="10"
         android:minLines="6"
         android:scrollbars="vertical"
-        android:background="@color/greyWhite"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/buttonStatus"
         android:layout_width="287dp"
         android:layout_height="52dp"
-        android:layout_marginTop="88dp"
-        android:text="Status"
+        android:layout_marginTop="48dp"
         android:backgroundTint="@color/black"
+        android:text="Important"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewValidate" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/buttonCancel"
         android:layout_width="190dp"
         android:layout_height="75dp"
         android:layout_marginStart="10dp"
@@ -56,11 +57,11 @@
         android:text="Cancel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button4"
+        app:layout_constraintTop_toBottomOf="@+id/buttonStatus"
         app:layout_constraintVertical_bias="0.909" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/buttonCommit"
         android:layout_width="190dp"
         android:layout_height="75dp"
         android:layout_marginRight="10dp"
@@ -69,7 +70,20 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/button2"
-        app:layout_constraintTop_toBottomOf="@+id/button4"
+        app:layout_constraintStart_toEndOf="@+id/buttonCancel"
+        app:layout_constraintTop_toBottomOf="@+id/buttonStatus"
         app:layout_constraintVertical_bias="0.909" />
+
+    <TextView
+        android:id="@+id/textViewValidate"
+        android:layout_width="206dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="12dp"
+        android:text=""
+        android:textColor="@color/red"
+        android:textSize="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.121"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText" />
 </androidx.constraintlayout.widget.ConstraintLayout>
