--- a/ReminderProject/app/src/main/res/layout/activity_edit.xml
+++ b/ReminderProject/app/src/main/res/layout/activity_edit.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/blue"
     android:labelFor="@+id/editText"
-    android:background="@color/green">
-
+    tools:context=".EditActivity">
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -23,13 +23,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
+        android:background="@color/greyWhite"
         android:gravity="top|start"
         android:inputType="textMultiLine"
         android:lines="8"
         android:maxLines="10"
         android:minLines="6"
         android:scrollbars="vertical"
-        android:background="@color/greyWhite"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,25 +40,24 @@
         android:id="@+id/buttonStatus"
         android:layout_width="287dp"
         android:layout_height="52dp"
-        android:layout_marginTop="88dp"
-        android:text="Important"
+        android:layout_marginTop="48dp"
         android:backgroundTint="@color/black"
+        android:text="Important"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewValidate" />
 
     <Button
         android:id="@+id/buttonCancel"
         android:layout_width="190dp"
         android:layout_height="75dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="230dp"
+        android:layout_marginStart="10dp"
         android:backgroundTint="@color/greyWhite"
         android:text="Cancel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonStatus"
-        app:layout_constraintVertical_bias="0.875" />
+        app:layout_constraintVertical_bias="0.909" />
 
     <Button
         android:id="@+id/buttonCommit"
@@ -69,11 +69,31 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/button2"
+        app:layout_constraintStart_toEndOf="@+id/buttonCancel"
         app:layout_constraintTop_toBottomOf="@+id/buttonStatus"
-        app:layout_constraintVertical_bias="0.986" />
+        app:layout_constraintVertical_bias="0.909" />
 
+    <TextView
+        android:id="@+id/textViewValidate"
+        android:layout_width="206dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="12dp"
+        android:text=""
+        android:textColor="@color/red"
+        android:textSize="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.121"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText" />
 
-
-
+    <TextView
+        android:id="@+id/textHiddenId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="52dp"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.506"
+        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
