--- a/ReminderProject/app/src/main/res/layout/list_item.xml
+++ b/ReminderProject/app/src/main/res/layout/list_item.xml
@@ -9,7 +9,7 @@
         android:layout_width="373dp"
         android:layout_height="43dp"
         android:orientation="vertical"
-        app:layout_constraintStart_toEndOf="@+id/button"
+        app:layout_constraintStart_toEndOf="@+id/btnOption"
         android:layout_marginLeft="-25dp"
         android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -21,11 +21,12 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="Noi Dung"
+            android:textColor="@color/white"
             android:textSize="24dp" />
     </LinearLayout>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnOption"
         android:layout_width="13dp"
         android:layout_height="60dp"
         android:text="Button"
