--- a/ReminderProject/app/src/main/res/layout/activity_edit.xml
+++ b/ReminderProject/app/src/main/res/layout/activity_edit.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/blue"
     android:labelFor="@+id/editText"
-    tools:context=".EditActivity">
+    tools:context=".activities.EditActivity">
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
